(lang dune 3.19)

(name the_entertainment_hub_ml)

(generate_opam_files true)

(source
 (github Cheshulko/The-Entertainment-Hub-ml))

(authors "Mykyta Cheshulko <chehhmann.nick@gmail.com>")

(maintainers "Mykyta Cheshulko <chehhmann.nick@gmail.com>")

(license MIT)

(package
 (name the_entertainment_hub_ml)
 (synopsis "The Entertainment Hub [ No. 2 ]")
 (description "OCaml solution The Entertainment Hub [ No. 2 ]")
 (depends ocaml)
 (tags
  ("ocaml" "everybody-codes" "everybody-codes-ocaml" "the-entertainment-hub")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
